
2003-08-02 Version 1.31 30Jul03 Released
- Added a missing CLIENT_FOUND_ROWS to the second attempt to open
  the MySQL database -- this prevents UPDATE errors if nothing
  actually changed.
- Applied corrections to the manual supplied by Bob Collins.  Many thanks!

2003-07-30 Version 1.31 Beta 30Jul03
- Integrated Robert Mathews improved description of Priorities into
  the manual.
- Chased down the "The data is not valid" bug on WinMe/98/95.
- Found an orphaned buffer in the set_attributs part of WinMe/98/95.
- Add sleep(1) to console when it gets a SIGTSTP signal 
  to prevent it from using 100% of the CPU.
- Improve description of Priorities.
- Add a bit more documentation to jobq.c
- Complete hash table routine htable.c htable.h
- Change M_INFO to M_ERROR in attribs.c for Windows errors.

2003-07-23 Version 1.31 Beta 22Jul03
- Apply a patch from Nic Bellamy that clarifies the error messages 
  during recycling volumes.
- Documentation.
- Clear VolCatInfo in askdir.c so that readbytes is zeroed.
- Add SD statistics to backup report.
- Removed old workq code.
- Fixed rescheduling after error.
- Fixed delayed starts which were not working.
- Added priority to values that can change when starting
  a job.
- Complete implementation of new job scheduler. jobq.h jobq.c
  This code is turned off unless specifically enabled in src/version.h
- Integrate code from Nic Bellamy to check for recycled volume in
  mount.c in SD.
- Fix a couple of bugs in dlist.c
- Begin implementation of new job scheduler.
- Take serial.h provided by David Craigon, which corrects differences in 
  prototypes between serial.h and serial.c.
- Make db_get_media_ids() return Media Ids only for the current pool.
- Add new jobq.h and jobq.c drived from workq.
- Add JobPriority to jcr, and Priority to Job resource as well as
  to the run line in a Schedule.
- Remove unused pool record from autoprune.c.
- Implement Nic Bellamy's RecycleCurrentVolume.     
- Implement RecycleOldestVolume.